# cosmos-dumper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
cosmos_dumper/: cli.py
mongo_dumper/: cli.py
tests/: test_cli.py  test_export_split.py  test_import_glob_split.py  test_repro.py
