[project]
name = "cosmos-dumper"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "fabio.felici", email = "fabio.felici96c@gmail.com"},
]
dependencies = ["azure-cosmos>=4.14.6", "python-dotenv>=1.2.1", "loguru>=0.7.3", "tqdm>=4.67.3", "aiofiles>=25.1.0", "aiohttp>=3.13.3", "ijson>=3.4.0.post0", "pathos>=0.3.5"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
cosmos-dumper = "cosmos_dumper.cli:main"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["cosmos_dumper/"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pathos>=0.3.5",
]
